# fn-composer

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
example/: Cargo.toml  README.md  rust-toolchain.toml
example-1/: .env  Cargo.toml  migration-0.1.sql
example-1/src/: db.rs  fnutils.rs  handlers.rs  main.rs  model.rs  schema.rs
example-1/src/handlers/: product_handler.rs  user.rs
example-1/src/repository/: mod.rs  product_repository.rs  user_repository.rs
example-1/src/routes/: mod.rs
example-1/src/utils/: mod.rs
example-2/: Cargo.toml
example-2/src/: main.rs
example/src/: axumutils.rs  db.rs  fnutils.rs  lib.rs  main.rs
example/src/handlers/: product_handler.rs  user.rs
example/src/repository/: product_repository.rs  repository.rs  user_repository.rs
example/src/routes/: product_route.rs
example/src/utils/: secutils.rs
fn-compose/: Cargo.toml
fn-compose/src/: lib.rs
fn-compose/tests/: mod.rs
fn-macros/: Cargo.toml
fn-macros/src/: lib.rs
fn-macros/tests/: mod.rs
fnmacros/: Cargo.toml
fnmacros/src/: lib.rs
fnmacros/tests/: mod.rs
fnutils/: Cargo.toml
fnutils/src/: lib.rs
fnutils/tests/: mod.rs
function-compose/: Cargo.toml  LICENSE.txt  README.md
function-compose-proc-macros/: Cargo.toml  README.md
function-compose-proc-macros/src/: lib.rs
function-compose-proc-macros/tests/: mod.rs
function-compose/src/: lib.rs
function-compose/tests/: mod.rs
