[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
function-compose = {version = "0.1.2", path = "../function-compose"}
futures = "0.3.29"
retry = "2.0.0"
tokio = { version = "1", features = ["full"] }

axum = {version = "0.7.2", features=["multipart"]}
axum-macros = "0.4.0"
bcrypt = "0.15.0"
bigdecimal = {version = "0.4.2", features=["serde"]}
chrono = {version = "0.4.31", features = ["serde", "rustc-serialize"]}
deadpool = {version = "0.10.0", features = ["managed"]}
deadpool-diesel = {version = "0.5.0", features = ["postgres"]}
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "postgres_backend", "numeric"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
#postgres = { version = "0.19.4", features = ["with-uuid-1"] }
dotenv = "0.15.0"

postgres = {version = "0.19.7", features=["with-uuid-1"] }
serde = {version = "1.0.193",features = ["derive"]}
uuid = {version ="1.6.1", features = ["serde", "v4"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
serde_json = "1.0.111"
axum-extra = {version = "0.9.2", features=["query"]}
serde_qs = "0.12.0"
tower-http = {version = "0.5.2", features=["cors"]}