[package]
name = "fnmacros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = {version= "1.0.35", features=["proc-macro"]}
syn = {version = "2.0.48", features = ["full", "parsing", "proc-macro"]}
futures = "0.3.29"
fnutils = {path = "../fnutils"}
paste = "1.0.14"
retry = "2.0.0"
tokio-retry = "0.3.0"
tokio = { version = "1.38.0", features = ["sync"] }
#tokio = { version = "1", features = ["full"] }

[lib]
proc-macro = true
