[package]
name = "fnutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
paste = "1.0.14"
concat-idents = "1.1.5"



[dev-dependencies]
fnmacros = {path = "../fnmacros"}
tokio = { version = "1", features = ["full"] }