[package]
name = "function-compose"
version = "0.3.1"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/senthil-veerabahu/fn-composer"
license-file = "LICENSE.txt"
readme = "README.md"
description = "function composition library for rust"
documentation = "https://docs.rs/function-compose"
keywords = ["function", "composition", "function_composition", "function_compose"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
paste = "1.0.14"
concat-idents = "1.1.5"
function-compose-proc-macros = {path = "../function-compose-proc-macros", version = "0.3.1" }


[dev-dependencies]
retry = "2.0.0"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3.0"
